[project]
name = "veronique"
version = "0.1.0"
description = "Private graph DB / social network"
authors = [
  {name = "L3viathan", email="git@l3vi.de"},
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "sanic",
  "markdown-it-py[linkify]",
]
[dependency-groups]
test = [
  "sanic-testing",
  "pytest",
  "pytest-asyncio",
]
[project.urls]
Repository = "https://github.com/L3viathan/veronique"

[tool.uv.build-backend]
source-include = ["data/**"]
