[project]
name = "veronique"
version = "0.1.0"
description = "Private graph DB / social network"
authors = [
  {name = "L3viathan", email="git@l3vi.de"},
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "sanic",
  "markdown-it-py[linkify]",
  "phonenumbers",
]
[dependency-groups]
test = [
  "sanic-testing",
  "pytest",
  "pytest-asyncio",
]
[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project.urls]
Repository = "https://github.com/L3viathan/veronique"

[project.scripts]
veronique-bootstrap = "veronique.bootstrap"

[tool.uv.build-backend]
module-name = "veronique"
module-root = ""
source-exclude = ["test/**"]
data = { data = "data" }
